test: fix disabled opensearch tests